ecmascript/parser/tests/test262-error-references/fail/2e8378f658290622.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/2e8378f658290622.js:1:6
  |
1 | for (+i in {});
  |      ^^

